src/styles/global.css
@import "tailwindcss";

:root {
  --background: transparent;
  --foreground: #f8fafc;
  --card-bg: rgba(17, 34, 64, 0.7);
  --text-muted: #94a3b8;
}

/* APLICAÇÃO GLOBAL */
* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}

html,
body,
#root {
  min-height: 100vh;
  color: var(--foreground) !important;
}

body {
  overflow-x: hidden;
  overscroll-behavior: none;
}

.no-scrollbar {
  -ms-overflow-style: none;
  scrollbar-width: none;
}
.no-scrollbar::-webkit-scrollbar {
  display: none;
}

